FD6SL-48 z-index for hamburger icon added. Bug when scaling the window

--- a/css/style.scss
+++ b/css/style.scss
@@ -185,6 +185,7 @@ section {
       top: 19px;
       left: -3px;
       cursor: pointer;
+      z-index: 5;
 
       &:checked ~ span {
         opacity: 1;
